# ctrader_repo_plus6

./: .ci-helper.json  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .secrets.baseline  .tmp_check_coinspot.py  .tmp_envcheck.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Install-CtraderTools.ps1  README.md  SECURITY.md  Update-CtraderTools.ps1  _ci_smoke.py  bootstrap-ctrader-scheduler.ps1  ci-hardening.ps1  ci-helper.ps1  dashboard.py  last-task-event.xml  paper_trades.csv  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt  run_api.py  sanity-ctrader.ps1  setup-all.ps1  setup-ci-advanced.ps1  setup-ci-min.ps1  setup-ci.ps1  task-backup.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ci-smoke.txt  dependabot.yml
api/: coinspot_client.py  coinspot_exec.py  push_to_sheets.py  server.py
config/: config.live.yaml  config.paper.yaml  pools.yaml
configs/: example.yml
ctrader/: __main__.py  constraints.py  core.py  models.py  rebalancer.py
docs/: ORGANIZER.md
logs/: crypto_prices.csv
reports_20250908_224827/: black_check.txt  compileall.txt  flake8_all.txt  flake8_syntax_only.txt  isort_check.txt  pre_commit_all.txt
scripts/: audit-actions.ps1  check-protection.ps1  harden-repo.ps1  harden-runner.ps1  install-gh.ps1  repo-finalize.ps1  repo-harden.ps1  run_dashboard.bat  run_live_guarded.bat  run_paper_preview.bat  run_scheduler_30m.bat  secure-main.ps1
secrets/: google-service-account.example.json
strategies/: example_generate_signals.py
tests/: conftest.py  (+6 more)
(+176 files in other folders)
